# talk-to-me

api/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
api/src/: app.rs  db.rs  main.rs
api/src/extractors/: validated_json.rs
api/src/handlers/auth/: mod.rs  signup.rs
api/src/routes/: auth.rs  mod.rs
